--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "swiper": "^6.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
